# jeff

./: .env.example  .gitignore  CLAUDE.md  MILESTONE_C.md  README.md
core/: README.md  provider_contracts.ts
desktop/: index.html  package-lock.json  package.json  tsconfig.json
desktop/src-tauri/: Cargo.toml  build.rs  daemon_info.plist  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: action_bus.rs  agent_eval_core.rs  agent_runtime.rs  ambient.rs  app_polls.rs  artifact_parser.rs  awareness_core.rs  briefing.rs  calendar.rs  calendar_core.rs  character.rs  chat.rs  chat_streaming.rs  chunking.rs  classifier.rs  commands.rs  companion.rs  consolidation.rs  context_observer.rs  core_runtime.rs  cost_governor.rs  coworking.rs  crisis.rs  crisis_core.rs  daemon_client.rs  daemon_host.rs  daemon_ipc.rs  daemon_launchd.rs  daemon_supervisor.rs  document_model.rs  drive_core.rs  embedding.rs  errors.rs  flow.rs  gmail_core.rs  goal_extraction.rs  judgment_eval_core.rs  latency.rs  lib.rs  local_runtime.rs  (+38 more)
desktop/src-tauri/src/providers/: anthropic.rs  local.rs  realtime.rs
desktop/src-tauri/tests/: character_eval_json.rs  goal_eval.rs  intent_eval.rs
docs/: APPLE_RELEASE_SETUP.md  ARCHITECTURE.md  BUILD_PLAN.md  CHARACTER.md  CONTINUUM_REUSE_AUDIT.md  FIX_PLAN.md  HANDOFF_PHASE15_16.md  HARD_TEST_FINDINGS.md  HARD_TEST_PLAN.md  JARVIS_PLAN.md  LOCAL_RUNTIME.md  PHASE17_PLAN.md  PHASE18_PLAN.md  PHASES.md  PHASES_19_20_PLAN.md  PHASES_21_22_PLAN.md  PHASES_25_26_PLAN.md  PHASES_NEXT.md  PHASES_TRANSFORMATION.md  PHASE_23_24_PLAN.md  SINGLE_WINDOW_PLAN.md  SYNTHESIS_ARCHITECTURE.md  TESTING_GUIDE.md  VISION.md  (+2 more)
(+144 files in other folders)
