[package]
name = "jeff-desktop"
version = "0.1.0"
description = "Jeff desktop app Phase 0 scaffold"
authors = ["Jeff Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
dotenvy = "0.15"
pdf-extract = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls", "stream"] }
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
arboard = "3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# objective-c runtime for macos ServiceManagement and NSWorkspace calls.
objc2 = "0.6.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tauri = { version = "2.0.0", features = ["test", "tray-icon", "image-png"] }
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
